Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-6877

QGraphicsItem::setParentItem is slow.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 4.6.2
    • 4.6.0
    • Widgets: GraphicsView
    • None
    • 474e0dce59e827e4dd502bf12e7817b2602fb2c3,dc3005761d332f86d59257e2c6bb8aac70222b18,0dd05278e91ca1b0f4ffd32195584a57064ed24d,3c215a1644adcca32cfc451456b6891f9c8519fd

    Attachments

      No reviews matched the request. Check your Options in the drop-down menu of this sections header.

      Activity

        People

          bjnilsen Bjørn Erik Nilsen
          bjnilsen Bjørn Erik Nilsen
          Votes:
          0 Vote for this issue
          Watchers:
          0 Start watching this issue

          Dates

            Created:
            Updated:
            Resolved:

            Gerrit Reviews

              There are no open Gerrit changes