Improve performance of QGraphicsItem::setParentItem.

The biggest optimization here is "updateAncestorFlags()". It's much
faster to update all the flags rather than trying to enable/disable
certain flags according to the current state.

Task-number: QTBUG-6877
Reviewed-by: alexis